🐛 fix(utility): added icon high contrast mode css.

--- a/assets/scss/shared-ui/_utility.scss
+++ b/assets/scss/shared-ui/_utility.scss
@@ -257,3 +257,9 @@ $positions: (
 		}
 	}
 }
+
+@include body-class(true, false, true) {
+	.sui-error {
+		color: $nightrider;
+	}
+}
